# facial-vision-agent

./: README.md  pyproject.toml  setup.cfg
.github/workflows/: publish-pypi.yml  python-tests.yml
packaging/: agent-core-framework-metadata.ini
src/facial_vision_agent/: __init__.py  agent.py  llm_client.py  prompts.py
src/hair_vision_agent/: __init__.py  agent.py  llm_client.py  prompts.py  utils.py
tests/: conftest.py  test_agent.py  test_agent_base64.py  test_llm_client.py  test_llm_http.py
