[project]
name = "hair-vision-agent"
version = "0.1.1"
description = "Specialized agent for hair style recommendations"
authors = [{name = "Manolo Salsas", email = "manolez@gmail.com"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "agent-core-framework @ git+ssh://git@github.com/msalsas/agent-core-framework.git",
    "opencv-python>=4.8.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0"
]

[tool.setuptools.packages.find]
where = ["src"]