[project]
name = "facial-vision-agent"
version = "0.2.0"
description = "Specialized agent for facial and hair analysis"
authors = [{name = "Manolo Salsas", email = "manolez@gmail.com"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "agent-core-framework>=0.1.6",
    "opencv-python>=4.8.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0"
]

[tool.setuptools.packages.find]
where = ["src"]